// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcButton Html tag must be a <a></a> 1`] = `
"<a class=\\"lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" disabled=\\"false\\" href=\\"/\\">
  <!--v-if-->
</a>"
`;

exports[`LcButton Html tag must be a <router-link></router-link> 1`] = `
"<router-link class=\\"lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" disabled=\\"false\\" to=\\"/\\">
  <!--v-if-->
</router-link>"
`;

exports[`LcButton should be a block button 1`] = `
"<button class=\\"lc-btn--block lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" type=\\"button\\">
  <!--v-if-->
</button>"
`;

exports[`LcButton should be a blockFull button 1`] = `
"<button class=\\"lc-btn--block-full lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" type=\\"button\\">
  <!--v-if-->
</button>"
`;

exports[`LcButton should be a hasIcon button 1`] = `
"<button class=\\"lc-btn--has-icon lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" type=\\"button\\">
  <!--v-if-->
</button>"
`;

exports[`LcButton should be a loader button 1`] = `"<button class=\\"lc-btn--primary lc-btn--md lc-btn lc-btn--font-bold\\" type=\\"button\\"><span class=\\"lc-btn-loader\\" data-testid=\\"lc-btn-loader\\"><i class=\\"lc-btn-loader__spin\\"></i></span></button>"`;
